#ifndef SensorData_H
#define SensorData_H
#include <string>
class SensorData {
    public:
        SensorData();
        SensorData(long ts, std::string deviceID, double co, double humidity, bool light, double lpg, bool motion, double smoke, double temp);
        long getTimestamp() const;
        std::string getDeviceID() const;
        double getCO() const;
        double getHumidity() const;
        bool getLight() const;
        double getLPG() const;
        bool getMotion() const;
        double getSmoke() const;
        double getTemp() const;
        void setTemp(double temp);
    
    private:
        long ts;
        std::string deviceID;
        double co;
        double humidity;
        bool light;
        double lpg;
        bool motion;
        double smoke;
        double temp;
};
#endif